@@ -1,3 +1,7 @@
+repository
+==========
+* added error checking in ML objective to match expected covariance and observed covariance matrices
+
 Release 1.0.4-1540 (January 16, 2011)
 =====================================
 * added initialization to load OpenMx on swift workers
